// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileNameEdit Component > renders the profile name edit form pre-fills form with existing user data 1`] = `
<gcds-container>
  <gcds-heading>
    Edit your name
  </gcds-heading>
  <gcds-text>
    This will update your name with 
    <strong>
      every service you have shared your name with through GC Sign in.
    </strong>
  </gcds-text>
  <gcds-details>
    <gcds-text>
      <span>
        The following services have access to your name through GC Sign in:
      </span>
    </gcds-text>
    <ul
      style="margin: 0px;"
    >
      <li>
        GEO.ca
      </li>
    </ul>
    <gcds-text>
      If you are trying to update your name with a service that’s not connected to GC Sign in, you’ll need to go to that account.
    </gcds-text>
    <gcds-text>
      To search for another GC Account, visit the
       
      <gcds-link>
        GC Account directory
      </gcds-link>
      .
    </gcds-text>
  </gcds-details>
  <form
    id="form"
    style="margin-top: 38px;"
  >
    <gcds-container
      marginbottom="0"
      margintop="100"
    >
      <gcds-input
        data-testid="givenName"
      />
      <gcds-input
        data-testid="familyName"
      />
      <gcds-button>
        Continue
      </gcds-button>
       
      <gcds-button>
        Cancel
      </gcds-button>
    </gcds-container>
  </form>
</gcds-container>
`;

exports[`ProfileNameEdit Component > updates edit profile when form values change 1`] = `
<gcds-container>
  <gcds-heading
    class="hydrated"
  >
    Edit your name
  </gcds-heading>
  <gcds-text
    class="hydrated"
  >
    This will update your name with 
    <strong>
      every service you have shared your name with through GC Sign in.
    </strong>
  </gcds-text>
  <gcds-details
    class="hydrated"
  >
    <gcds-text
      class="hydrated"
    >
      <span>
        The following services have access to your name through GC Sign in:
      </span>
    </gcds-text>
    <ul
      style="margin: 0px;"
    >
      <li>
        GEO.ca
      </li>
    </ul>
    <gcds-text
      class="hydrated"
    >
      If you are trying to update your name with a service that’s not connected to GC Sign in, you’ll need to go to that account.
    </gcds-text>
    <gcds-text
      class="hydrated"
    >
      To search for another GC Account, visit the
       
      <gcds-link
        class="hydrated"
      >
        GC Account directory
      </gcds-link>
      .
    </gcds-text>
  </gcds-details>
  <form
    id="form"
    style="margin-top: 38px;"
  >
    <gcds-container
      marginbottom="0"
      margintop="100"
    >
      <gcds-input
        data-testid="givenName"
      />
      <gcds-input
        data-testid="familyName"
      />
      <gcds-button
        class="hydrated"
      >
        Continue
      </gcds-button>
       
      <gcds-button
        class="hydrated"
      >
        Cancel
      </gcds-button>
    </gcds-container>
  </form>
</gcds-container>
`;
